@@ -15,6 +15,8 @@
 * Fixed the silent option parsing problem.
   (http://onestepback.org/redmine/issues/show/47)
 
+* Fixed :verbose=>false flag on sh and ruby commands.  
+
 == Version 0.8.7
 
 * Fixed EXEEXT for JRuby on windows.
